@@ -5,6 +5,10 @@ main-menu (0.051) UNRELEASED; urgency=low
   * Steinar H. Gunderson
     - If main-menu encounters an unknown debconf/priority, it is no longer
       interpreted as `critical', but as `medium'.
+  * Denis Barbier
+    - Fix a buffer overflow in menu_entry() when language contains an
+      underscore and the package description was not translated into
+      this language.
 
  -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 22:56:09 -0500
 
